force-app/main/default/objects/Account/fields/CICD_Test__c.field-meta.xml
<CustomField>
    <fullName>CICD_Test__c</fullName>
    <label>CICD Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>