force-app/main/default/objects/Account/fields/Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Use_Code__c</fullName>
    <label>Entity Use Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Federal Government</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - State Government</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Tribal Government</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D - Foreign Diplomat</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E - Charitable/Exempt Organization</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>F - Religious Organization</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>G - Resale</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>H - Agriculture</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I - Industrial Prod/Manufacturers</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>J - Direct Pay</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>K - Direct Mail</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M - Educational Organization</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N - Local Government</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>P - Commercial Aquaculture</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Q - Commercial Fishery</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R - Non-Resident</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>